--- a/Ecommerce-FE/user-v2/.env
+++ b/Ecommerce-FE/user-v2/.env
@@ -1,8 +1,8 @@
-# VITE_ENDPOINT='http://localhost:8000/'
+VITE_ENDPOINT='http://localhost:8000/'
 
 # VITE_SOCKET_ENPOINT='http://localhost:3333/'
 
-VITE_ENDPOINT='http://vanloc.site:31411/'
+# VITE_ENDPOINT='http://vanloc.site:31411/'
 
 VITE_SOCKET_ENPOINT='http://vanloc.site:32333/'
 
