--- a/Ecommerce-FE/admin/.env
+++ b/Ecommerce-FE/admin/.env
@@ -1,5 +1,5 @@
-VITE_ENDPOINT='http://microservice.vanloc.site:31411/'
-VITE_SOCKET_ENPOINT='http://vanloc.site:32333/'
-# VITE_SOCKET_ENPOINT='http://localhost:3333/'
-# VITE_ENDPOINT='http://localhost:8000/'
+# VITE_ENDPOINT='http://microservice.vanloc.site:31411/'
+# VITE_SOCKET_ENPOINT='http://vanloc.site:32333/'
+VITE_SOCKET_ENPOINT='http://localhost:3333/'
+VITE_ENDPOINT='http://localhost:8000/'
 VITE_LIMIT=20
