--- a/Ecommerce-FE/user-v2/.env
+++ b/Ecommerce-FE/user-v2/.env
@@ -1,10 +1,10 @@
 VITE_ENDPOINT='http://localhost:8000/'
 
-# VITE_SOCKET_ENPOINT='http://localhost:3333/'
+VITE_SOCKET_ENPOINT='http://localhost:3333/'
 
 # VITE_ENDPOINT='http://vanloc.site:31411/'
 
-VITE_SOCKET_ENPOINT='http://vanloc.site:32333/'
+# VITE_SOCKET_ENPOINT='http://vanloc.site:32333/'
 
 VITE_VNP_HASHSECRET=NLGCGU4V4FM6WSZSDRIUIBLGTM2DL1GL
 
