--- a/Ecommerce-FE/user-v2/.env
+++ b/Ecommerce-FE/user-v2/.env
@@ -2,9 +2,9 @@
 
 # VITE_SOCKET_ENPOINT='http://localhost:3333/'
 
-VITE_ENDPOINT='http://vanloc.site:31411/'
+VITE_ENDPOINT='http://34.124.147.85:30939/'
 
-VITE_SOCKET_ENPOINT='http://vanloc.site:32333/'
+VITE_SOCKET_ENPOINT='http://34.124.147.85:32333/'
 
 VITE_VNP_HASHSECRET=NLGCGU4V4FM6WSZSDRIUIBLGTM2DL1GL
 
