--- a/Ecommerce-BE/users/.env
+++ b/Ecommerce-BE/users/.env
@@ -4,7 +4,7 @@ DATABASE_URL_PRODUCT=mysql://root:123123@localhost:3302/microservice?pool_timeou
 
 DATABASE_URL_ORDER=mysql://root:123123@localhost:3304/microservice?pool_timeout=20&connection_limit=500
 
-DATABASE_URL_STORE=mysql://root:123123@localhost:3303/microservice?pool_timeout=20&connection_limit=500
+DATABASE_URL_STORE=mysql://root:123123@34.124.147.85:32003/microservice?pool_timeout=20&connection_limit=500
 
 ACCESS_TOKEN_EXPIRATION_TIME=28800000
 
