--- a/Ecommerce-BE/users/.env
+++ b/Ecommerce-BE/users/.env
@@ -1,8 +1,8 @@
-DATABASE_URL_USER=mysql://root:123123@localhost:3301/microservice?pool_timeout=20&connection_limit=500
+DATABASE_URL_USER=mysql://root:123123@34.124.147.85:32001/microservice?pool_timeout=20&connection_limit=500
 
-DATABASE_URL_PRODUCT=mysql://root:123123@localhost:3302/microservice?pool_timeout=20&connection_limit=500
+DATABASE_URL_PRODUCT=mysql://root:123123@34.124.147.85:32002/microservice?pool_timeout=20&connection_limit=500
 
-DATABASE_URL_ORDER=mysql://root:123123@localhost:3304/microservice?pool_timeout=20&connection_limit=500
+DATABASE_URL_ORDER=mysql://root:123123@34.124.147.85:32004/microservice?pool_timeout=20&connection_limit=500
 
 DATABASE_URL_STORE=mysql://root:123123@34.124.147.85:32003/microservice?pool_timeout=20&connection_limit=500
 
