--- a/Ecommerce-BE/users/package.json
+++ b/Ecommerce-BE/users/package.json
@@ -76,6 +76,7 @@
         "date-fns-tz": "^3.1.3",
         "dayjs": "^1.11.10",
         "dotenv-cli": "^7.4.2",
+        "ioredis": "^5.4.1",
         "lodash": "^4.17.21",
         "nodemailer": "^6.9.7",
         "passport": "^0.6.0",
