--- a/Ecommerce-FE/admin/package.json
+++ b/Ecommerce-FE/admin/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "preview": "vite preview",
         "lint": "eslint --ext ts,tsx src/",
         "lint:fix": "eslint --fix --ext ts,tsx src/",
@@ -21,7 +21,7 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/themes": "^3.0.2",
         "@tanstack/react-query": "^5.29.2",
-        "@tanstack/react-query-devtools": "4",
+        "@tanstack/react-query-devtools": "^5.54.0",
         "@tanstack/react-table": "^8.16.0",
         "@types/react-big-calendar": "^1.8.9",
         "@types/uuid": "^9.0.8",
